--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "https://github.com/lennym/express-healthcheck.git"
   },
   "author": "Leonard Martin",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/lennym/express-healthcheck/issues"
   },
